--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -14,6 +14,11 @@ body {
   padding-right: 100px;
 }
 
+img, table {
+  max-width: 100%;
+  height: auto;
+}
+
 .about-hero {
   background: url(./images/about/about-hero.) no-repeat center center;
       -webkit-background-size: cover;
@@ -34,6 +39,8 @@ body {
 }
 
 .about-summary {
+  max-width: 100%;
+  height: auto;
   padding-top: 50px;
 }
 
@@ -46,13 +53,12 @@ body {
 
 .headshots {
   float:right;
-  margin-bottom: 150px;
   padding-left: 100px;
 }
 
 .band-bullets {
-  padding-right: 500px;
-  padding-top: 50px;
+  max-width: 100%;
+  height: auto;
 }
 
 .whats-mipso-copy {
@@ -62,13 +68,25 @@ body {
 
 table {
   width: 100%;
-  padding-top: 50px;
+  padding-top: 25px;
+  border-spacing: 0 15px;
 }
 
 th {
   font-family: 'Raleway', sans-serif;
+  text-align: left;
+  padding-bottom: 20px;
 }
 
+a:link {
+  text-decoration: none;
+  color: #605d5d;
+}
+
+a:visited {
+  text-decoration: none;
+  color: #605d5d;
+}
 
 .buy-now {
     font-family: 'Raleway', sans-serif;
@@ -77,7 +95,6 @@ th {
     width: 220px;
     height: 45px;
 }
-
 
 .table-content {
   font-family: font-family: 'Noto Serif', serif;
@@ -88,5 +105,9 @@ th {
   text-align: center;
   border: 5px solid #605D5D;
   margin: auto;
-  margin-top: 50px;
+  margin-top: 65px;
+}
+
+.date {
+  padding-right: 50px;
 }
