--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -1,12 +1,3 @@
-html {
-  background: url() no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-
 body {
   font-family: 'Noto Serif', serif;
   color: #605D5D;
@@ -19,20 +10,20 @@ img, table {
   height: auto;
 }
 
-.about-hero {
-  background: url(./images/about/about-hero.) no-repeat center center;
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;}
+nav {
+  font-family: 'Raleway', sans-serif;
+  color: #D8D8D8;
+  font-size: 16pt;
+  float: right;
+  padding-top: 50px;
+}
 
-.about-hero {
-  background: url(./images/tour-dates/tour-dates-hero.) no-repeat center center;
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;}
-
+.about-banner {
+    background: url(./images/about/about-hero.) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;}
 
 .section-title {
   font-family: 'Raleway', sans-serif;
