--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -23,7 +23,10 @@ nav {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;}
+    background-size: cover;
+    max-width: 100%;
+    height: auto;
+  }
 
 .section-title {
   font-family: 'Raleway', sans-serif;
@@ -101,4 +104,13 @@ a:visited {
 
 .date {
   padding-right: 50px;
+}
+
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -1; 
 }
