--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -1,3 +1,7 @@
+.row.instagram {
+  margin-top: 30px;
+}
+
 body {
   font-family: 'Noto Serif', serif;
   color: #605D5D;
@@ -107,9 +111,4 @@ a:visited {
 
 .date {
   padding-right: 50px;
-}
-
-.work {
-  height: 200px;
-  background-color: yellow; 
 }
