--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -1,3 +1,11 @@
+html.index {
+  background: url(../images/home-hero.png) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 h1 {
   font-family: 'Raleway', sans-serif;
   padding-top: 35px;
@@ -17,10 +25,17 @@ img, table {
   height: auto;
 }
 
-/*MUSIC PAGE STYLING START  */
-.row.feature-video {
-  text-align: center;
+/* Navbar */
+.navbar-brand {
+  align-content: left;
 }
+
+.navbar-nav {
+  text-align: right;
+}
+
+
+/*MUSIC PAGE STYLING START  */
 
 .row.instagram {
   margin-top: 30px;
