--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -4,6 +4,7 @@ html.index {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  z-index: -1;
 }
 
 h1 {
@@ -26,13 +27,29 @@ img, table {
 }
 
 /* Navbar */
-.navbar-brand {
-  align-content: left;
+.container.nav {
+  position: absolute;
+  top: 5%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
 }
 
+
+
 .navbar-nav {
-  text-align: right;
+  margin-top: 50px;
 }
+
+.nav-item {
+  margin-left: 10px;
+  margin-right: 30px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+
 
 
 /*MUSIC PAGE STYLING START  */
@@ -143,7 +160,6 @@ a:visited {
     float: left;
     color: #ffffff;
     width: 250px;
-
     line-height: 250px;
     text-align: center;
     margin: 25px;
