--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -17,8 +17,8 @@ h1 {
 body {
   font-family: 'Noto Serif', serif;
   color: #605D5D;
-  padding-left: 100px;
-  padding-right: 100px;
+  /* padding-left: 100px;
+  padding-right: 100px; */
 }
 
 img, table {
@@ -27,26 +27,18 @@ img, table {
 }
 
 /* Navbar */
-.container.nav {
-  position: absolute;
-  top: 5%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 10;
-}
 
+.navbar-brand img{
+    max-width: 100px;
+    max-height: 50px;
+  }
 
-
-.navbar-nav {
-  margin-top: 50px;
-}
-
-.nav-item {
-  margin-left: 10px;
-  margin-right: 30px;
+.navbar-right {
+  margin-left: 15px;
   font-family: 'Raleway', sans-serif;
+  color: #D8D8D8;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 
