--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -1,10 +1,48 @@
-html.index {
-  background: url(../images/home-hero.png) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  z-index: -1;
+#bg {
+  position: fixed;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+}
+#bg img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  min-width: 50%;
+  min-height: 50%;
+}
+
+.navbar-brand img{
+    max-width: 250px;
+    max-height: 200px;
+    padding-bottom: 15px;
+  }
+
+.navbar .nav > li > a  {
+  color: #D8D8D8;
+}
+
+.navbar .nav > li > a:hover  {
+  color: #FFF;
+}
+
+.navbar.navbar-default {
+  background-color: transparent !important;
+  border-color: transparent;
+  background-image: none;
+  box-shadow: none;
+}
+
+.navbar-right {
+  margin-left: 15px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+  margin-top: 25px;
 }
 
 h1 {
@@ -26,25 +64,11 @@ img, table {
   height: auto;
 }
 
-/* Navbar */
-
-.navbar-brand img{
-    max-width: 100px;
-    max-height: 50px;
-  }
-
-.navbar-right {
-  margin-left: 15px;
-  font-family: 'Raleway', sans-serif;
-  color: #D8D8D8;
-  font-weight: bold;
-  font-size: 16px;
-}
-
-
-
 
 /*MUSIC PAGE STYLING START  */
+.feature-videos {
+  margin-bottom: 30px;
+}
 
 .row.instagram {
   margin-top: 30px;
