--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -146,7 +146,7 @@ a:visited {
 }
 
 .table-content {
-  font-family: font-family: 'Noto Serif', serif;
+  font-family: 'Noto Serif', serif;
 }
 
 .tour-dates-announced-box {
@@ -205,17 +205,66 @@ a:visited {
   color: #D8D8D8;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*MERCH PAGE STYLING ENDS  */
+
+/*DISCOGRAPHY PAGE STYLING STARTS*/
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 3;
+  right: 3;
+  height: 100%;
+  width: 93%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #605D5D;
+}
+
+.cover:hover .overlay {
+  opacity: .9;
+}
+
+.text {
+color: #D8D8D8;
+font-size: 18px;
+font-family: 'Raleway', sans-serif;
+font-weight: bold;
+text-align: center;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+-ms-transform: translate(-50%, -50%);
+}
+
+.small-text {
+color: #D8D8D8;
+font-size: 12px;
+font-family: 'Raleway', sans-serif;
+font-weight: bold;
+text-align: center;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+-ms-transform: translate(-50%, -50%);
+}
+
+.small-overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 3;
+  right: 3;
+  height: 100%;
+  width: 90%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #605D5D;
+}
+
+.cover:hover .small-overlay {
+  opacity: .9;
+}
