--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -177,6 +177,10 @@ a:visited {
   color: #D8D8D8;
 }
 
+.filterDiv:hover {
+  cursor: not-allowed;
+}
+
 /*MERCH PAGE STYLING ENDS  */
 
 /*DISCOGRAPHY PAGE STYLING STARTS*/
