Merch Filter Work

--- a/assets/stylesheets/stylesheet.css
+++ b/assets/stylesheets/stylesheet.css
@@ -232,8 +232,7 @@ h3 {
     float: left;
     color: #ffffff;
     width: 250px;
-    line-height: 250px;
-    text-align: center;
+    line-height: 100px;
     margin: 25px;
     display: none;
     }
@@ -245,8 +244,20 @@ h3 {
     display: block;
 }
 
-.myBtnContainer {
+#myBtnContainer {
+  margin-top: 40px;
   width: 100%;
+
+}
+
+h2.merch-header {
+  font-family: 'Raleway', sans-serif;
+    font-weight: bold;
+    font-size: 36px;
+}
+
+button.btn {
+  height: 90px;
 }
 
 
